<resources>
    <string name="app_name">KeepInFit</string>

    <string name="profile_gender">Пол</string>
    <string name="profile_age">Возраст</string>
    <string name="profile_height">Рост</string>
    <string name="profile_weight">Вес</string>
    <string name="profile_goal">Цель</string>
    <string name="profile_activity">Активность</string>

    <string-array name="genders">
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>

    <string-array name="ages">
        <item>20</item>
        <item>40</item>
        <item>60</item>
    </string-array>

    <string-array name="heightList">
        <item>180</item>
        <item>190</item>
        <item>200</item>
    </string-array>

    <string-array name="weightList">
        <item>70</item>
        <item>80</item>
        <item>90</item>
    </string-array>

    <string-array name="activityLevels">
        <item>Минимальный уровень</item>
        <item>Низкий уровень</item>
        <item>Средний уровень</item>
        <item>Высокий уровень</item>
        <item>Очень высокий</item>
    </string-array>

    <string-array name="goals">
        <item>Набрать вес</item>
        <item>Похудеть</item>
        <item>Не изменять вес</item>
    </string-array>

    <string name="text_view_default_text">TextView</string>

    <string name="daily_stats">Статистика за день</string>
    <string name="proteins">Белки</string>
    <string name="fats">Жиры</string>
    <string name="carbohydrates">Углеводы</string>
    <string name="kilocalories">Килокалории</string>
    <string name="title">Название</string>

    <string name="proteins_reduced">Б</string>
    <string name="fats_reduced">Ж</string>
    <string name="carbohydrates_reduced">У</string>
    <string name="kilocalories_reduced">Ккал</string>
    <string name="portion_weight">в 100 гр:</string>

    <string name="hint_grams">грамм</string>
    <string name="hint_search_food">Введите название продукта</string>
    <string name="hint_input_mass">Введите массу продукта</string>

    <string name="btn_delete_all">Удалить все продукты</string>
    <string name="btn_done">Готово</string>
    <string name="btn_cancel">Отмена</string>
    <string name="btn_add">Добавить</string>
    <string name="btn_profile">Профиль</string>

    <string name="slash_zero">/0</string>
    <string name="zero">0</string>
    <string name="slash">/</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_description_add_button">AddButton</string>
    <string name="toast_product_added">Продукт добавлен</string>
    <string name="toast_product_not_added">Продукт не добавлен</string>
    <string name="toast_all_product_deleted">Все продукты удалены</string>
    <string name="FoodItemFragmentTitle">Добавьте новый продукт</string>
    <string name="etEmptyNumberError">Введите число</string>
    <string name="etInputNumberWrongValueError">Значение должно быть меньше 100</string>
    <string name="toastCheckIfDataCorrect">Проверьте правильность введённых данных</string>
    <string name="etInputNumberWrongValueKilocaloriesError">Значение должно быть меньше 1000</string>
    <string name="etEmptyTitleError">Введите название</string>
    <string name="toast_data_updated">Данные обновлены</string>

</resources>