<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.AddFoodItemToDB">

    <EditText
        android:id = "@+id/etFoodItemTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:inputType="text"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvProteins"
        style="@style/textViewLarge"
        android:text="@string/proteins"
        android:textAppearance="@android:style/TextAppearance.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etFoodItemTitle"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/tvFats"
        style="@style/textViewLarge"
        android:text="@string/fats"
        android:textAppearance="@android:style/TextAppearance.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFoodItemTitle"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/tvCarbohydrates"
        style="@style/textViewLarge"
        android:text="@string/carbohydrates"
        android:textAppearance="@android:style/TextAppearance.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFoodItemTitle"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/tvKilocalories"
        style="@style/textViewLarge"
        android:text="@string/kilocalories"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFoodItemTitle"
        app:layout_constraintVertical_bias="0.4" />

    <EditText
        android:id="@+id/etFoodItemProteins"
        style="@style/foodItemEditText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etFoodItemTitle"
        app:layout_constraintVertical_bias="0.09" />

    <EditText
        android:id="@+id/etFoodItemFats"
        style="@style/foodItemEditText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etFoodItemTitle"
        app:layout_constraintVertical_bias="0.19" />

    <EditText
        android:id="@+id/etFoodItemCarbohydrates"
        style="@style/foodItemEditText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etFoodItemTitle"
        app:layout_constraintVertical_bias="0.29" />

    <EditText
        android:id="@+id/etFoodItemKilocalories"
        style="@style/foodItemEditText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etFoodItemTitle"
        app:layout_constraintVertical_bias="0.39" />

</androidx.constraintlayout.widget.ConstraintLayout>