<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    tools:context=".ui.MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/foodItemsView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/cardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/cardTitle"
                android:text="@string/text_view_default_text"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/cardViewInnerText" />


            <TextView
                android:id="@+id/cardSubtitle"
                android:text="@string/text_view_default_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardTitle"
                style="@style/cardViewInnerText"/>

            <TextView
                android:id="@+id/cardProteinsText"
                android:text="@string/proteins_reduced"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardSubtitle"
                style="@style/cardViewInnerText"/>

            <TextView
                android:id="@+id/cardCarbohydratesText"
                android:text="@string/carbohydrates_reduced"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardProteinsText"
                style="@style/cardViewInnerText"/>

            <TextView
                android:id="@+id/cardFatsText"
                android:text="@string/fats_reduced"
                app:layout_constraintStart_toEndOf="@id/cardProteinsValue"
                app:layout_constraintTop_toBottomOf="@+id/cardSubtitle"
                style="@style/cardViewInnerText"/>

            <TextView
                android:id="@+id/cardKilocaloriesText"
                android:text="@string/kilocalories_reduced"
                app:layout_constraintStart_toEndOf="@id/cardCarbohydratesValue"
                app:layout_constraintTop_toBottomOf="@+id/cardFatsText"
                style="@style/cardViewInnerText"/>

            <TextView
                android:id="@+id/cardProteinsValue"
                android:text="@string/text_view_default_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintTop_toBottomOf="@+id/cardSubtitle"
                style="@style/cardViewInnerText"/>

            <TextView
                android:id="@+id/cardFatsValue"
                android:text="@string/text_view_default_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardSubtitle"
                style="@style/cardViewInnerText"/>

            <TextView
                android:id="@+id/cardCarbohydratesValue"
                android:text="@string/text_view_default_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintTop_toBottomOf="@+id/cardProteinsValue"
                style="@style/cardViewInnerText"/>

            <TextView
                android:id="@+id/cardKilocaloriesValue"
                android:text="@string/text_view_default_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toBottomOf="@+id/cardFatsValue"
                style="@style/cardViewInnerText"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>