<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.AddFoodItemToDB">

    <EditText
        android:id = "@+id/edit_text_food_item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_proteins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/proteins"
        android:textAppearance="@android:style/TextAppearance.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_food_item_title"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/text_view_fats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/fats"
        android:textAppearance="@android:style/TextAppearance.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_food_item_title"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/text_view_carbohydrates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/carbohydrates"
        android:textAppearance="@android:style/TextAppearance.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_food_item_title"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/kilocalories"
        android:textAppearance="@android:style/TextAppearance.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_food_item_title"
        app:layout_constraintVertical_bias="0.4" />

    <EditText
        android:id="@+id/edit_text_food_item_proteins"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toEndOf="@id/text_view_proteins"
        app:layout_constraintTop_toBottomOf="@id/edit_text_food_item_title"
        app:layout_constraintVertical_bias="0.09" />

    <EditText
        android:id="@+id/edit_text_food_item_fats"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toEndOf="@id/text_view_proteins"
        app:layout_constraintTop_toBottomOf="@id/edit_text_food_item_title"
        app:layout_constraintVertical_bias="0.19" />

    <EditText
        android:id="@+id/edit_text_food_item_carbohydrates"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toEndOf="@id/text_view_proteins"
        app:layout_constraintTop_toBottomOf="@id/edit_text_food_item_title"
        app:layout_constraintVertical_bias="0.29" />

    <EditText
        android:id="@+id/edit_text_food_item_kcals"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toEndOf="@id/text_view_proteins"
        app:layout_constraintTop_toBottomOf="@id/edit_text_food_item_title"
        app:layout_constraintVertical_bias="0.39" />

</androidx.constraintlayout.widget.ConstraintLayout>